# mahjongg_core

./: .gitignore  LICENSE  Makefile  README.md  alternative_tui.py  app_tui_grid.py  config.json  config.py  pyproject.toml  requirements-dev.txt  tile.py  utils.py  widget_testbed.py
core/: data.py  exceptions.py  game.py  player.py  tile.py  utils.py  wall.py
phases/: setup.py
requirements/: base.txt  dev.txt
rules/: Chinese_Classical.json
rulesets/: chinese_classical.json
src/: exceptions.py  game.py  old_game.py
src/core/: big_state.py  game.py  hand.py  player.py  round.py  wall.py
src/models/: hand.py  player.py  tile.py  wind.py
src/models/tui/: tui.py
src/tui/: game_info.py  player_hand.py  player_info.py  tile.py
src/tui/tcss/: alternative_tui.tcss  app_tui_grid.tcss  player_hand.tcss  player_info.tcss  widget_testbed.tcss
test/: test_tile.py
tests/: test_game.py  test_player.py  test_scenario.py  test_tile.py  test_utils.py  test_wall.py
tests/models/: test_hand.py  test_player.py  test_tile.py  test_wind.py
tests/test_models/: test_hand.py  test_player.py  test_tile.py  test_wind.py
