[project]
requires-python = ">= 3.13"
pydantic = ">=2.10.3"
loguru = ">=0.7.3"
faker = ">=33.1.0"

authors = [
  {name = "John Orchard", email = "jtorchard@protonmail.com"},
]

description = "Core implementation of Mahjong"

readme = "README.md"

license = {text = "MIT License"}

[tool.ruff.lint]
extend-select = ["I"]
